fix(ObjectPageTitle): fix alignment of actions

--- a/packages/main/src/components/ObjectPageTitle/ObjectPageTitle.module.css
+++ b/packages/main/src/components/ObjectPageTitle/ObjectPageTitle.module.css
@@ -45,6 +45,7 @@
   flex-grow: 1;
   width: 100%;
   overflow-x: hidden;
+  align-items: flex-start;
 }
 
 .title {
